--- a/app/src/main/res/layout/item_gem_weight.xml
+++ b/app/src/main/res/layout/item_gem_weight.xml
@@ -82,8 +82,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_gravity="center">
@@ -91,7 +89,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout_one_gem_weight_K"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="match_parent"
+                android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="16dp"
                 android:layout_weight="1"
@@ -119,7 +117,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout_one_gem_weight_P"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="match_parent"
+                android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
@@ -148,7 +146,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout_one_gem_weight_Y"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="match_parent"
+                android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
                 android:layout_weight="1"
@@ -179,7 +177,6 @@
             android:id="@+id/tv_total_weight_KPY"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_weight="1"
             android:gravity="center"
