fix item gem weight

--- a/app/src/main/res/layout/dialog_gem_weight.xml
+++ b/app/src/main/res/layout/dialog_gem_weight.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/tv_gem_quantity"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.1"
+                android:layout_weight="1.2"
                 android:gravity="center"
                 android:text="ကျောက်အလုံးရေ"
                 android:textAppearance="@style/TextAppearance.ShweMi.Body2"
@@ -61,7 +61,7 @@
                 android:id="@+id/tv_one_gem_weight_gm"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.1"
+                android:layout_weight="1.2"
                 android:gravity="center"
                 android:text="1လုံးအလေးချိန်(gm)"
                 android:textAppearance="@style/TextAppearance.ShweMi.Body2"
@@ -97,6 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
             android:insetLeft="0dp"
             android:insetTop="0dp"
             android:insetRight="0dp"
@@ -122,7 +123,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/btn_continue"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             app:layout_constraintVertical_bias="0.0"
