--- a/app/src/main/res/layout/item_gem_weight.xml
+++ b/app/src/main/res/layout/item_gem_weight.xml
@@ -21,9 +21,9 @@
             android:id="@+id/textInputLayout_gem_quantity"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_weight="1.1"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
+            android:layout_weight="1.2"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             app:boxCornerRadiusTopEnd="10dp"
             app:boxCornerRadiusBottomStart="10dp"
@@ -51,9 +51,9 @@
             android:id="@+id/textInputLayout_one_gem_weight_gm"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_weight="1.1"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
+            android:layout_weight="1.2"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             app:boxCornerRadiusTopEnd="10dp"
             app:boxCornerRadiusBottomStart="10dp"
@@ -84,14 +84,16 @@
             android:layout_height="45dp"
             android:layout_weight="1"
             android:orientation="horizontal"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayout_one_gem_weight_K"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
@@ -119,8 +121,8 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
                 android:layout_weight="1"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
@@ -148,7 +150,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
@@ -173,19 +175,51 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_total_weight_KPY"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="32dp"
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp">
+
+            <TextView
+            android:id="@+id/tv_total_weight_K"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:hint="0K     0P     0Y"
-            android:paddingStart="16dp"
+            android:hint="0K"
             android:textColor="@color/primary_text"
             android:textColorHint="@color/secondary_text"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_total_weight_P"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:hint="0P"
+                android:textColor="@color/primary_text"
+                android:textColorHint="@color/secondary_text"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_total_weight_Y"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:hint="0Y"
+                android:textColor="@color/primary_text"
+                android:textColorHint="@color/secondary_text"
+                android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                android:textStyle="bold" />
+
+        </LinearLayout>
     </LinearLayout>
 
 
