--- a/app/src/main/res/layout/fragment_receive_new_order.xml
+++ b/app/src/main/res/layout/fragment_receive_new_order.xml
@@ -1413,6 +1413,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/white"
                         android:insetLeft="0dp"
@@ -1423,6 +1424,7 @@
                         android:paddingEnd="16dp"
                         android:text="Inventory"
                         android:textAppearance="@style/TextAppearance.ShweMi.Body2"
+                        android:textSize="12sp"
                         android:textColor="@color/primary"
                         android:textStyle="bold"
                         app:cornerRadius="10dp"
@@ -1437,6 +1439,7 @@
                         android:id="@+id/btn_outside"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
+                        android:layout_marginBottom="8dp"
                         android:layout_marginStart="8dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/white"
