--- a/app/src/main/res/layout/fragment_with_kpy.xml
+++ b/app/src/main/res/layout/fragment_with_kpy.xml
@@ -976,6 +976,7 @@
                         android:orientation="horizontal">
 
                         <RadioButton
+                            android:id="@+id/radio_btn_value"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -985,6 +986,7 @@
                             android:textColor="@color/primary_text" />
 
                         <RadioButton
+                            android:id="@+id/radio_btn_kpy"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
