with kpy finished

--- a/app/src/main/res/layout/fragment_scan_stock.xml
+++ b/app/src/main/res/layout/fragment_scan_stock.xml
@@ -31,6 +31,9 @@
         app:boxCornerRadiusTopStart="10dp"
         app:boxStrokeColor="@color/edit_text_color"
         app:boxStrokeWidth="1dp"
+        app:endIconMode="custom"
+        app:endIconDrawable="@drawable/ic_qr_scan"
+        app:endIconTintMode="screen"
         app:errorEnabled="false"
         app:hintEnabled="false"
         app:layout_constraintStart_toEndOf="@+id/tv_label_stock_code"
