--- a/app/src/main/res/layout/dialog_general_sell_add_product.xml
+++ b/app/src/main/res/layout/dialog_general_sell_add_product.xml
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout_spinner_group">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/spinner_content"
+            android:id="@+id/act_reason"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false"
