--- a/app/src/main/res/layout/fragment_exchange_order.xml
+++ b/app/src/main/res/layout/fragment_exchange_order.xml
@@ -38,6 +38,9 @@
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusTopEnd="10dp"
                 app:boxCornerRadiusTopStart="10dp"
+                app:endIconMode="custom"
+                app:endIconDrawable="@drawable/ic_qr_scan"
+                app:endIconTintMode="screen"
                 app:boxStrokeColor="@color/edit_text_color"
                 app:boxStrokeWidth="1dp"
                 app:errorEnabled="false"
