--- a/app/src/main/res/layout/fragment_resell_stock_info_added_sell.xml
+++ b/app/src/main/res/layout/fragment_resell_stock_info_added_sell.xml
@@ -939,7 +939,7 @@
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout1"
+            android:id="@+id/layout_other_costs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -1327,7 +1327,7 @@
             app:icon="@drawable/right"
             app:iconSize="15dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/constraintLayout1" />
+            app:layout_constraintTop_toBottomOf="@id/layout_other_costs" />
 
         <View
             android:id="@+id/view3"
