--- a/app/src/main/res/layout/fragment_stock_detail.xml
+++ b/app/src/main/res/layout/fragment_stock_detail.xml
@@ -97,8 +97,8 @@
                         android:elevation="3dp"
                         app:hintEnabled="false">
 
-                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                            android:id="@+id/spinner_content"
+                        <AutoCompleteTextView
+                            android:id="@+id/act_reason"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:focusable="false"
@@ -184,7 +184,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/textInputLayout_stock_size"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_marginTop="4dp"
@@ -197,8 +197,8 @@
                         app:errorEnabled="false"
                         app:hintEnabled="false">
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/edt_stock_size"
+                        <AutoCompleteTextView
+                            android:id="@+id/act_stock_size"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:inputType="number"
