--- a/app/src/main/res/layout/item_resell_stock_info.xml
+++ b/app/src/main/res/layout/item_resell_stock_info.xml
@@ -78,7 +78,7 @@
             android:id="@+id/tv_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="0"
             android:textColor="@color/primary_text"
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold"
